src/test/deca/syntax/invalid/arithmetic-minusEqual.synt
arithmetic-minusEqual.deca:12:

